refactor: correcciones de rendimiento, precios en properties, @Transactional y limpieza de imports